    - Add cramfs initrd support, although it won't be bootable until #244589
      in busybox-cvs is fixed.
    - Add monolithic-only support for powerpc 2.6 installs, commented out
      since it won't work yet due to the above.
  * Steve Langasek
    - Change netboot target for alpha now that netabootwrap is in the
      archive, and add an appropriate versioned build-dep.

 -- Joey Hess <joeyh@debian.org>  Tue,  4 May 2004 16:56:04 -0400

debian-installer (20040430) unstable; urgency=low

  * Rebuilt w/o i386 stuff in localudebs (argh).

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Apr 2004 20:36:47 -0400

debian-installer (20040429) unstable; urgency=HIGH

  * Rebuild with hw-detect 0.93.

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Apr 2004 13:52:01 -0400

debian-installer (20040428) unstable; urgency=low

  * Joey Hess
    - The new discover2 udebs DO NOT WORK, so we're not going to use them
      for beta4. Switched the 2.6 images to use discover1.
    - This build includes languagechooser 1.18.1 and cdebconf 0.64
      with some fixes. The cdebconf update is only needed for i386, and the
      languagechooser change is not RC, so this build is only needed for i386;
      the rest can use yesterday's build.
    - Update the installation howto for os-prober and 2.6 changes.

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Apr 2004 23:46:58 -0400

debian-installer (20040427) unstable; urgency=low

  * Joshua Kwan
    - there is no cdrom-core-modules-2.4.24-sparc32-di

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Apr 2004 11:21:36 -0400

debian-installer (20040426) unstable; urgency=low

  * Joey Hess
    - Try to fix the sparc cdrom build, nic-pci-modules-2.4.26-sparc64-di is
      not in the archive, and will not be in beta4.
    - Final build for beta4.

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2004 15:12:33 -0400

debian-installer (20040424) unstable; urgency=low

  * Bdale Garbee
    - trim hppa kernel command line options to stay under palo size limit